--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="page">
     <header class="header">
@@ -25,7 +25,7 @@
         src="images/header-image.png"
         alt="опять двойка"
       />
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic header__square-pic-rotatiion"></div>
     </header>
     <main>
       <section class="description" aria-label="две колонки">
@@ -51,6 +51,128 @@
             </p>
           </div>
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img
+              class="cards__image"
+              src="images/cards-attention.png"
+              alt="Книга"
+            />
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">
+              Глубокие знания возникают, если чередовать сфокусированное и
+              рассеянное мышление.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img
+              class="cards__image"
+              src="images/cards-recall.png"
+              alt="Скульптура"
+            />
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">
+              Вспоминайте изученное — это позволит соединить разрозненные порции
+              памяти.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img
+              class="cards__image"
+              src="images/cards-interliving.png"
+              alt="Открытое пространство"
+            />
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">
+              Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img
+              class="cards__image"
+              src="images/cards-question.png"
+              alt="Помещение"
+            />
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">
+              Слушая преподавателя, придумывайте хороший вопрос, который вас
+              действительно волнует.
+            </p>
+          </li>
+          <li class="cards__item">
+            <img
+              class="cards__image"
+              src="images/cards-competence.png"
+              alt="Стопка книг"
+            />
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу: вам только
+              кажется, что вы владеете новой темой.
+            </p>
+          </li>
+          <li class="cards__item">
+            <div class="cards__image"></div>
+            <div class="cards__title"></div>
+            <div class="cards__description"></div>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <div class="video__iframe">
+            <iframe
+              width="515"
+              height="316"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              style="border: 0"
+              title="Видео ТЭД"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video__iframe">
+            <iframe
+              width="515"
+              height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              style="border: 0"
+              title="Видео ТЭД"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__pharagraph">
+              С детства Барбаре не давалась математика. Она считала себя
+              законченным гуманитарием, причём далеко не самым умным. В армии
+              она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры. Но для продвижения по службе нужно
+              было сдавать математику. И тогда Барбара придумала свой подход к
+              точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
+              первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее →</a>
+        <img class="feynman__image" src="images/feynman.png" alt="Фэйман" />
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -100,14 +222,27 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
-        <img class="feynman__image" src="images/feynman.png" alt="Фэйман" />
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Хан</h2>
+          <p class="khan__title">Весь мир — школа</p>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+            студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+            всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и
+            жизни.
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle kaufman__triangle-rotation"></div>
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
@@ -176,6 +311,38 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
+        <div class="resources__logo-zone">
+          <a href="#"
+            ><img
+              class="resources__link"
+              src="/images/logo/resources-arzamas.svg"
+              alt="Арзамас"
+          /></a>
+          <a href="#"
+            ><img
+              class="resources__link"
+              src="/images/logo/resources-n1.svg"
+              alt="н1"
+          /></a>
+          <a href="#"
+            ><img
+              class="resources__link"
+              src="/images/logo/resources-strelka.svg"
+              alt="стрелка"
+          /></a>
+          <a href="#"
+            ><img
+              class="resources__link"
+              src="/images/logo/resources-polka.svg"
+              alt="полька"
+          /></a>
+        </div>
       </section>
     </main>
 
