vtoraya popitka tretya pr

--- a/index.html
+++ b/index.html
@@ -321,26 +321,26 @@
           <a href="#"
             ><img
               class="resources__link"
-              src="/images/logo/resources-arzamas.svg"
+              src="./images/logo/resources-arzamas.svg"
               alt="Арзамас"
           /></a>
           <a href="#"
             ><img
               class="resources__link"
-              src="/images/logo/resources-n1.svg"
+              src="./images/logo/resources-n1.svg"
               alt="н1"
           /></a>
           <a href="#"
             ><img
               class="resources__link"
-              src="/images/logo/resources-strelka.svg"
+              src="./images/logo/resources-strelka.svg"
               alt="стрелка"
           /></a>
           <a href="#"
             ><img
               class="resources__link"
-              src="/images/logo/resources-polka.svg"
-              alt="полька"
+              src="./images/logo/resources-polka.svg"
+              alt="полка"
           /></a>
         </div>
       </section>
